<resources>
    <string name="app_name">Donation App</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="past_donations">Past Donations</string>
    <string name="facts">Facts</string>
    <string name="blood_banks">Blood Banks</string>
    <string name="donors">Donors</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_sign_up">User Signup</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="profile_underline"><u>Profile</u></string>
    <string name="password">Password</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="do_you_want_to_be_a_donor">Do you want to be a donor?</string>
    <string name="weight_in_kg">Weight in Kg</string>
    <string name="request_title">Request Title</string>
    <string name="home">Home</string>
    <string name="ngo">NGO</string>
    <string name="chats">Chats</string>
    <string name="my_requests">My Requests</string>
    <string name="profile">Profile</string>
    <string name="first_slide_title">Interactive Approach</string>
    <string name="second_slide_title">Location Information</string>
    <string name="third_slide_title">NGO Mode</string>
    <string name="first_slide_desc">A direct interactive platform where a donor would be accessed by the people in need, where they can get in touch to help the people</string>
    <string name="second_slide_desc">A Geo Location based Integrated Place to get to nearby verified Blood Banks in case of any Emergency</string>
    <string name="third_slide_desc">Special NGO mode enabled to use and create Events such as Blood Donation camp for the users and people connected through the platform</string>


    <string-array name="blood_groups">

        <item>Select Your Blood Group</item>
        <item>A+</item>
        <item>B+</item>
        <item>A-</item>
        <item>B-</item>
        <item>AB+</item>
        <item>O+</item>
        <item>AB-</item>
        <item>O-</item>

    </string-array>

    <string-array name="gender">

        <item>Select Your Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Others</item>

    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ngo_name">Ketto.org</string>
    <string name="ngo_description">Let us assume an individual, unfortunately, meets with an accident on the road. His medical expenses and hospital... more</string>

</resources>