<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home_menu"
        android:title="Home"
        android:icon="@drawable/home_icon"
        android:iconTint="@color/primary_red"
        />

    <item
        android:id="@+id/blood_banks_menu"
        android:title="@string/blood_banks"
        android:icon="@drawable/blood_bank_icon1"
        android:iconTint="@color/primary_red"
        />

    <item
        android:id="@+id/past_donation_menu"
        android:title="@string/past_donations"
        android:icon="@drawable/past_donations_icon"
        android:iconTint="@color/primary_red"
        />
    <item
        android:id="@+id/donor_menu"
        android:title="@string/donors"
        android:icon="@drawable/donors_icon"
        android:iconTint="@color/primary_red"
        />


</menu>