<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.UserSignupActivity"
    android:background="@color/background">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/dark_red"
        android:text="@string/user_sign_up"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:gravity="center">
    </TextView>

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/profile"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/profile_pic"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:textColor="#171616">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:textColor="#171616"
            >

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/black"
        app:passwordToggleEnabled= "true"
        app:passwordToggleTint="@color/black"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxLines="1"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp">

        <RelativeLayout
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            android:layout_weight="1">

            <TextView
                android:id="@+id/gendertv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="17dp"
                android:hint="@string/gender"
                android:maxLines="1"
                android:padding="3dp"
                android:textColor="#171616"
                android:textSize="18sp"
                />

            <Spinner
                android:id="@+id/genderList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center"
                android:layout_marginEnd="11dp"
                />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/dob"
            android:textColorHint="@color/black"
            android:layout_marginStart="8dp"
            android:background="@color/white"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dob"
                android:inputType="date"
                android:maxLines="1"
                android:textColor="#171616">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/phone_number"
        android:textColorHint="@color/black"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLines="1"
            android:textColor="#171616">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/address"
        android:textColorHint="@color/black"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:textColor="#171616">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:text="@string/do_you_want_to_be_a_donor"
        android:textSize="20sp"
        android:textColor="@color/dark_red"
        >

    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="16dp">
    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        android:textColor="@color/dark_red"
        >

    </RadioButton>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no"
        android:layout_marginStart="16dp"
        android:textSize="18sp"
        android:textColor="@color/dark_red"
        >

    </RadioButton>
    </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/weight_in_kg"
            android:textColorHint="@color/black"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="195dp"
            android:background="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight_in_kg"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="#171616"
                >

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:background="@drawable/rounded_corner"
        android:layout_marginBottom="20dp"
        >

    </Button>
</LinearLayout>