<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.AddRequestActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/status_bar"
        android:layout_marginTop="-3dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:id="@+id/linear_layout_addrequest">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:id="@+id/back_button"
            android:src="@drawable/ic_arrow_back"
            android:layout_marginLeft="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Request"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_medium"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:textSize="25dp"
            android:layout_weight="1"
            android:layout_marginLeft="60dp"
            android:paddingTop="8dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/add_request_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/linear_layout_addrequest"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/add_request_image" />

        <ImageView
            android:id="@+id/request_pic_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_request_pic"
            android:layout_marginLeft="-25dp"
            android:layout_marginTop="-24dp"
            android:layout_toRightOf="@id/add_request_pic"
            android:src="@drawable/ic_pic_add_button" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/patient_name_enter_box"
        android:layout_below="@id/add_request_pic"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="10dp"
        android:gravity="top"
        android:background="@drawable/background_ngo_edit_profile"
        android:backgroundTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/patient_name_enter"
            android:background="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text"
            android:hint="@string/name"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textColorHint="@color/primary_red"
            android:backgroundTint="@color/grey"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/patient_gender_enter_box"
        android:layout_below="@id/patient_name_enter_box"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="10dp"
        android:gravity="top"
        android:background="@drawable/background_ngo_edit_profile"
        android:backgroundTint="@color/grey">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/patient_gender_enter"
        android:background="@color/white"
        android:fontFamily="@font/poppins_regular"
        android:inputType="text"
        android:hint="@string/gender"
        android:textCursorDrawable="@drawable/cursor_color"
        android:textColorHint="@color/primary_red"
        android:backgroundTint="@color/grey"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dob_textview"
        android:text="Date of Birth"
        android:textColor="@color/black"
        android:layout_below="@id/patient_gender_enter_box"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_regular"/>

        <TextView
            android:id="@+id/patient_dob_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dob_textview"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:hint="dd-mm-yyyy"
            android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/blood_category_textview"
        android:text="Blood Category"
        android:layout_toRightOf="@id/dob_textview"
        android:layout_below="@id/patient_gender_enter_box"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:fontFamily="@font/poppins_regular"/>

        <Spinner
            android:id="@+id/blood_group_spinner"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/blood_category_textview"
            android:layout_marginLeft="87dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/patient_dob_enter" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/patient_address_enter_box"
        android:layout_below="@id/patient_dob_enter"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="10dp"
        android:gravity="top"
        android:background="@drawable/background_ngo_edit_profile"
        android:backgroundTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/patient_address_enter"
            android:background="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text"
            android:hint="@string/address"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textColorHint="@color/primary_red"
            android:backgroundTint="@color/grey"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/patient_contact_enter_box"
        android:layout_below="@id/patient_address_enter_box"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="10dp"
        android:gravity="top"
        android:background="@drawable/background_ngo_edit_profile"
        android:backgroundTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/patient_contact_enter"
            android:background="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text"
            android:hint="Contact Details"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textColorHint="@color/primary_red"
            android:backgroundTint="@color/grey"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/patient_email_enter_box"
        android:layout_below="@id/patient_contact_enter_box"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:elevation="10dp"
        android:gravity="top"
        android:background="@drawable/background_ngo_edit_profile"
        android:backgroundTint="@color/grey">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/patient_email_enter"
            android:background="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:inputType="text"
            android:hint="@string/email"
            android:textCursorDrawable="@drawable/cursor_color"
            android:textColorHint="@color/primary_red"
            android:backgroundTint="@color/grey"/>

    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/patient_title_enter_box"
            android:layout_below="@id/patient_email_enter_box"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:elevation="10dp"
            android:gravity="top"
            android:background="@drawable/background_ngo_edit_profile"
            android:backgroundTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/patient_title_enter"
                android:background="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text"
                android:hint="@string/request_title"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textColorHint="@color/primary_red"
                android:backgroundTint="@color/grey"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/patient_description_enter_box"
            android:layout_below="@id/patient_title_enter_box"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:elevation="10dp"
            android:gravity="top"
            android:background="@drawable/background_ngo_edit_profile"
            android:backgroundTint="@color/grey">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/patient_description_enter"
                android:background="@color/white"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text"
                android:textCursorDrawable="@drawable/cursor_color"
                android:hint="Description"
                android:textColorHint="@color/primary_red"
                android:backgroundTint="@color/grey"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/request_submit_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/patient_description_enter_box"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_signup_page_email_password"
            android:backgroundTint="@color/primary_red"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="@color/white" />

    </RelativeLayout>

</ScrollView>